# api-gateway

./: .env  .gitignore  docker-compose.yaml  pyproject.toml
docs/: README.md
src/app/application/: dto.py  interactor.py  usecase.py
src/app/application/contracts/requests/: requests.py  responses.py
src/app/application/protocols/: interactor.py
src/app/application/usecases/: request_to_service.py
src/app/domain/: entity.py  exceptions.py  interfaces.py  value_objects.py
src/app/domain/common/: entities.py  exceptions.py  value_objects.py  values_objects.py
src/app/domain/request_to_service/: entity.py  interfaces.py  value_objects.py
src/app/domain/requests/: entities.py  repositories.py  value_objects.py
src/app/infrastructure/: logger.py
src/app/infrastructure/brokers/: nats_broker.py
src/app/infrastructure/brokers/publishing/: publishing_service.py
src/app/infrastructure/di/: dependencies.py
src/app/main/: config.py  dependencies.py  main.py
src/app/presentation/: exception_handlers.py
src/app/presentation/api/services/auth/: routers.py
